# indoscraping

./: README.md  pyproject.toml
.gemini/: settings.json
.github/: bisnis.prompt.md  cnbcindonesia.prompt.md  cnnindonesia.prompt.md  detik.prompt.md  general.prompt.md  kompas.prompt.md
examples/: cnbc.py
output/: cnbc_scraped_20250731_110756.json
src/indoscraping/: __init__.py
src/indoscraping/scraper/news/: bisnis.py  cnbcindonesia.py  cnnindonesia.py  detik.py  detik_articles.json  kompas.py
