[project]
name = "indoscraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fake-useragent>=2.2.0",
    "requests>=2.32.4",
]

[project.scripts]
indoscraping = "indoscraping:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
